# MUON_SCATTERING_TOMOGRAPHY

./: CMakeLists.txt  Hist_PoCA.py  My al codes filename wise  POCA_output.txt  Poca_Histogram.py  README.md  action_project1.cc  action_project1.hh  construction_project1.cc  construction_project1.hh  cry_setup.txt  detector_project1.cc  detector_project1.hh  event_project1.cc  event_project1.hh  generator_project1.cc  generator_project1.hh  hits_output.txt  physics_project1.cc  physics_project1.hh  poca_mt.py  poca_mt_2.py  poca_mt_3.py  run_project1.cc  run_project1.hh  sim.cc
ALL_OUTPUTS_FOLDER/: Readme_All_Outputs.txt
GEOMETRY_FOLDER/: CMakeLists.txt  readme.txt  run.mac  sim.cc  vis.mac
POCA_Point_Generation_Folder/: Poca_Histogram.py  Readme_POCA.txt  poca_mt.py
Pattern_Recognition_method_code/: FromPOCAToHistogramToPRM.py  POCA_TO_PRM_PART1.py  Readme_PRM.txt
